// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonUqOrgAffiliationFormSection tests  should render component with both values 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
    xs={6}
  >
    <TextField
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      select={false}
      value="Test"
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={6}
  >
    <WithStyles(FormControl)
      fullWidth={true}
      required={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))>
        Organisation type
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        onChange={[MockFunction]}
        value="453987"
      >
        <WithStyles(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with defaults 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
    xs={6}
  >
    <TextField
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      select={false}
      value=""
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={6}
  >
    <WithStyles(FormControl)
      fullWidth={true}
      required={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))>
        Organisation type
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        onChange={[MockFunction]}
        value=""
      >
        <WithStyles(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with organisation affiliation type value 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
    xs={6}
  >
    <TextField
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      select={false}
      value=""
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={6}
  >
    <WithStyles(FormControl)
      fullWidth={true}
      required={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))>
        Organisation type
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        onChange={[MockFunction]}
        value="453987"
      >
        <WithStyles(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with organisation affiliation value 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
    xs={6}
  >
    <TextField
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      select={false}
      value="Test"
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={6}
  >
    <WithStyles(FormControl)
      fullWidth={true}
      required={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))>
        Organisation type
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        onChange={[MockFunction]}
        value=""
      >
        <WithStyles(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
